# aibangla

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json
.github/workflows/: build.yml  release.yml
scripts/: create-ico.cjs  create-pngs.cjs  generate-icons.cjs  icon-gen.rs  init.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: ai_engine.rs  buffer.rs  commands.rs  config.rs  input_hook.rs  main.rs  text_injector.rs
src/components/: LivePreview.tsx  Settings.tsx  SystemTray.tsx
