[package]
name = "aibangla"
version = "1.0.0"
description = "AI-powered Bengali input method"
authors = ["AiBangla Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
rdev = "0.5"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
once_cell = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
